Fixing letter spacing.

--- a/css/styles.less
+++ b/css/styles.less
@@ -364,6 +364,7 @@ nav.navbar {
             padding-left: 10px;
             text-transform: none;
             font-weight: 500 !important;
+            letter-spacing: inherit;
           }
           ul {
             li {
